<resources>
    <string name="app_name">Weather App</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="change_location">Change Location</string>
    <string name="show_daily_forecast_item">Show Daily Forecast</string>
    <string name="toggle_units_item">Toggle Units</string>
    <string name="weather_condition_icon">Weather condition icon</string>
    <string name="chicago">Chicago</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="home_date_time_text">Sun Aug 21 11:54 AM, 2023</string>
    <string name="current_temperature_text">73°F</string>
    <string name="feels_like_text">Feels Like 73°F</string>
    <string name="weather_image">Weather image</string>
    <string name="winds_text">Winds: NE at 11 mph gusting to 10 mph</string>
    <string name="weather_descp_text">Partially Cloudy (25% clouds)</string>
    <string name="hourly_time">1:00 PM</string>
    <string name="hourly_temp">64°F</string>
    <string name="hourly_temp_descp">Overcast</string>
    <string name="today">Today</string>
    <string name="imageviewperhour">imageViewPerHour</string>
    <string name="humidity_text">Humidity: 82%</string>
    <string name="uv_text">UV Index: 2</string>
    <string name="afternoon">Afternoon</string>
    <string name="visibility_text">Visibility: 9.9 mi</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="default_temp">73°F</string>
    <string name="afternoon_temp">64°F</string>
    <string name="evening_temp">65°F</string>
    <string name="night_temp">64°F</string>
    <string name="sunrise_text">Sunrise: 6:04 AM</string>
    <string name="sunset_text">Sunset: 7:41 PM</string>
    <string name="day_text">Sunday, 8/21</string>
    <string name="daily_temp_descrp">Partly Cloudy throughout the day with storms possible.</string>
    <string name="precipitation_text">(100% precip.)</string>
    <string name="_8_am">8am</string>
    <string name="_1pm">1pm</string>
    <string name="_1PM">1:00 PM</string>
    <string name="_5pm">5pm</string>
    <string name="_11pm">11pm</string>
    <string name="max_min_temp">75°F/64°F</string>
</resources>